# visix

./: CMakeLists.txt  README.md  portfile.cmake  usage  vcpkg.json
src/: global.h  main.cpp
src/include/: global.h
src/include/sdk/: common.hpp
src/include/sdk/application/: AppState.hpp  Application.hpp
src/include/uxml/: Uxml.hpp  UxmlElement.hpp  UxmlProperty.hpp  UxmlUtility.hpp  UxmlnsDefinition.hpp
src/include/uxml/binding/: BindingOption.hpp  BindingOptionBuilder.hpp
src/sdk/src/application/: Application.cpp
src/uxml/: Uxml.cpp  Uxml.hpp  UxmlElement.cpp  UxmlElement.hpp  UxmlProperty.hpp  UxmlUtility.hpp
src/uxml-complier/src/: main.cpp
src/uxml/binding/: BindingOption.cpp  BindingOption.hpp  BindingOptionBuilder.hpp
src/uxml/src/: Uxml.cpp  UxmlElement.cpp  UxmlProperty.cpp  UxmlnsDefinition.cpp
src/uxml/src/binding/: BindingOption.cpp  BindingOptionBuilder.cpp
tests/: sample.uxml
tests/material/: sample.uxml
